--- a/src/main/resources/public/template/icons-list.html
+++ b/src/main/resources/public/template/icons-list.html
@@ -1,8 +1,8 @@
-<p class="row info tuto">
-	<b><i18n>tuto.title</i18n></b><br>
-	<b><i18n>tuto.action.select</i18n></b> <i18n>tuto.text.select</i18n><br>
-	<b><i18n>tuto.action.open</i18n></b> <i18n>tuto.text.open</i18n>
-</p>
+<infotip class="info tuto" name="rack-explorer-tutorial">
+	<strong><i18n>tuto.title</i18n></strong><br>
+	<strong><i18n>tuto.action.select</i18n></strong> <i18n>tuto.text.select</i18n><br>
+	<strong><i18n>tuto.action.open</i18n></strong> <i18n>tuto.text.open</i18n>
+</infotip>
 
 <article class="icons-view">
 	<header>&nbsp;</header>
@@ -10,22 +10,22 @@
 		<div ng-repeat="rack in rackList.all | filter:filterRack:true" class="element reduce-block-six" ng-class="{ selected: rack.selected }">
 			<explorer ng-model="rack.selected">
 				<a class="[[rack.metadata.contentType]] container">
-					<i class="[[folder.name === 'history' && rack.metadata.contentType === 'img' ? 'unknown' : rack.metadata.contentType]]-large" ng-if="rack.metadata.contentType !== 'img' || folder.name === 'history'">
+					<i class="[[select.folderName === 'history' && rack.metadata.contentType === 'img' ? 'unknown' : rack.metadata.contentType]]-large" ng-if="rack.metadata.contentType !== 'img' || select.folderName === 'history'">
 					</i>
-					<div class="clip absolute" ng-if="rack.metadata.contentType === 'img' && folder.name !== 'history'">
-						<img ng-src="[['/rack/get/'+rack._id+'?thumbnail=120x120']]" alt="thumbnail" />
+					<div class="clip absolute" ng-if="rack.metadata.contentType === 'img' && select.folderName !== 'history'">
+						<img ng-src="[['/rack/get/' + rack._id + '?thumbnail=120x120']]" alt="thumbnail" />
 					</div>
 				</a>
 				<legend>
 					<a>
 						[[rack.name]]
 						<br>
-						<strong>[[folder.name !== 'history' ? rack.fromName : rack.toName]]</strong>
+						<strong>[[select.folderName !== 'history' ? rack.fromName : rack.toName]]</strong>
 					</a>
 				</legend>
 
-				<i class="download" tooltip="[['rack.download']]" ng-if="folder.name !== 'history'">
-					<a ng-href="[[folder.name !== 'history' ? '/rack/get/'+rack._id : '' ]]"></a>
+				<i class="download" tooltip="[['rack.download']]" ng-if="select.folderName !== 'history'">
+					<a ng-href="[[select.folderName !== 'history' ? '/rack/get/' + rack._id : '' ]]"></a>
 				</i>
 			</explorer>
 		</div>
