[Fix] #21098: Rack reduce lightbox height

--- a/src/main/resources/public/template/send-rack.html
+++ b/src/main/resources/public/template/send-rack.html
@@ -39,7 +39,7 @@
 
                     <div class="row">
                         <input type="text" 
-                            class="twelve cell" 
+                            class="twelve cell no-margin-bottom"
                             ng-model="search.search" 
                             autofocus 
                             ng-change="updateFoundUsersGroups()" 
