--- a/src/main/resources/public/template/table-list.html
+++ b/src/main/resources/public/template/table-list.html
@@ -1,4 +1,4 @@
-<article class="list-view">
+<article class="list-view" ng-if="totalDisplayed">
 	<table class="twelve">
 		<thead class="tableheader whiteheader">
     		<tr>
