--- a/src/main/resources/public/template/library.html
+++ b/src/main/resources/public/template/library.html
@@ -63,6 +63,36 @@
 		<section class="margin-four">
 			<div class="twelve cell">
 				<container template="list"></container>
+				<!-- Empty screen My rack -->
+				<div class="emptyscreen" ng-if="select.folderName === 'mine' && !totalDisplayed">
+					<h2 class="emptyscreen-header">
+						<i18n>empty.rack.creation.title</i18n>
+					</h2>
+					<img class="emptyscreen-image__mini" src="/rack/public/img/empty-rack.svg">
+					<p class="emptyscreen-footer">
+						<i18n>empty.rack.creation</i18n>
+					</p>
+					<a class="button" ng-click="openNewRack()" workflow="rack.send">
+						<i18n>rack.sendRack</i18n>
+					</a>
+				</div>
+				<!-- Empty screen History -->
+				<div class="emptyscreen" ng-if="select.folderName === 'history' && !totalDisplayed">
+					<h2 class="emptyscreen-header">
+						<i18n>empty.rack.consultation.title</i18n>
+					</h2>
+					<img class="emptyscreen-image__mini" src="/rack/public/img/empty-rack.svg">
+					<p class="emptyscreen-footer">
+						<i18n>empty.rack.consultation</i18n>
+					</p>
+				</div>
+				<!-- Empty screen Trash -->
+				<div class="emptyscreen" ng-if="select.folderName === 'trash' && !totalDisplayed">
+					<img class="emptyscreen-image" src="/assets/themes/entcore-css-lib/images/empty-trash.svg">
+					<p class="emptyscreen-footer">
+						<i18n>empty.trash2</i18n>
+					</p>
+				</div>
 			</div>
 		</section>
 	</div>
