feat(emptyscreen): #30598, recycle bin button

--- a/src/main/resources/public/template/library.html
+++ b/src/main/resources/public/template/library.html
@@ -18,7 +18,9 @@
 		<nav class="contextual-buttons margin-four">
 			<div class="twelve cell">
 				<div class="action-buttons">
-					<button ng-click="openNewRack()" workflow="rack.send" ng-if="totalDisplayed">
+					<button ng-click="openNewRack()" 
+							workflow="rack.send" 
+							ng-if="totalDisplayed || (!totalDisplayed && select.folderName === 'trash')">
 						<i18n>rack.sendRack</i18n>
 					</button>
 				</div>
