fix(emptyscreen): #30598, fix action button position

--- a/src/main/resources/public/template/table-list.html
+++ b/src/main/resources/public/template/table-list.html
@@ -1,4 +1,4 @@
-<article class="list-view" ng-if="totalDisplayed">
+<article class="list-view no-margin" ng-if="totalDisplayed">
 	<table class="twelve">
 		<thead class="tableheader whiteheader">
     		<tr>
