--- a/src/main/resources/public/template/library.html
+++ b/src/main/resources/public/template/library.html
@@ -11,27 +11,18 @@
 <container template="send-rack"></container>
 
 <div class="row" ng-controller="LibraryController">
-	<div class="row rigid-grid">
+	<div class="row rigid-grid bottom-spacing-twice">
 		<h1 class="four cell" data-reload>
 			<a><i class="rack"></i><i18n>rack.title</i18n></a>
 		</h1>
-		<nav class="contextual-buttons margin-four">
-			<div class="twelve cell">
-				<div class="action-buttons">
-					<button ng-click="openNewRack()" 
-							workflow="rack.send" 
-							ng-if="totalDisplayed || (!totalDisplayed && select.folderName === 'trash')">
-						<i18n>rack.sendRack</i18n>
-					</button>
-				</div>
-				<div class="display-buttons" ng-if="totalDisplayed">
-					<div class="choice-view">
-						<i class="show-icons" ng-class="{ selected: template.contains('list', 'icons-list') }" ng-click="template.open('list', 'icons-list')"></i>
-						<i class="show-list" ng-class="{ selected: template.contains('list', 'table-list') }" ng-click="template.open('list', 'table-list')"></i>
-					</div>
-				</div>
-			</div>
 
+		<nav class="contextual-buttons margin-four">
+			<button ng-click="openNewRack()" 
+					workflow="rack.send" 
+					ng-if="totalDisplayed || (!totalDisplayed && select.folderName === 'trash')"
+					class="right-magnet">
+				<i18n>rack.sendRack</i18n>
+			</button>
 		</nav>
 	</div>
 
@@ -56,13 +47,24 @@
 					</li>
 				</ul>
 			</nav>
+
 			<div class="nine row" ng-hide="select.folderName === 'trash' && !totalDisplayed">
 				<hr class="row" />
 				<h2><i18n>rack.usedSpace</i18n></h2>
 				<progress-bar max="quota.max" filled="quota.used" unit="[[quota.unit]]"></progress-bar>
 			</div>
 		</section>
+
 		<section class="margin-four">
+			<div class="twelve cell">
+				<div class="display-buttons" ng-if="totalDisplayed">
+					<div class="choice-view">
+						<i class="show-icons" ng-class="{ selected: template.contains('list', 'icons-list') }" ng-click="template.open('list', 'icons-list')"></i>
+						<i class="show-list" ng-class="{ selected: template.contains('list', 'table-list') }" ng-click="template.open('list', 'table-list')"></i>
+					</div>
+				</div>
+			</div>
+
 			<div class="twelve cell">
 				<container template="list"></container>
 				<!-- Empty screen My rack -->
