fix: Avoid load folder picker if not needed

--- a/src/main/resources/public/template/copy-files.html
+++ b/src/main/resources/public/template/copy-files.html
@@ -18,6 +18,6 @@
  ~
  -->
 
-<lightbox show="lightboxes.copy" on-close="lightboxes.copy = false">
+<lightbox show="lightboxes.copy" on-close="lightboxes.copy = false" ng-if="lightboxes.copy">
     <folder-picker folder-props="copyProps"></folder-picker>
 </lightbox>
