fix(angular): #44148, Fix auto-closing elements messing up Angular templates

--- a/src/main/resources/public/template/table-list.html
+++ b/src/main/resources/public/template/table-list.html
@@ -5,7 +5,7 @@
     			<th class="icon" ng-if="select.folderName !== 'history'">
     				<input type="checkbox" ng-model="select.all" ng-change="switchAll()"/>
     			</th>
-    			<th class="icon" />
+    			<th class="icon"></th>
     			<th class="content" ng-click="orderBy('name')">
                     <i18n>title</i18n>
 				</th>
