--- a/src/main/resources/public/template/library.html
+++ b/src/main/resources/public/template/library.html
@@ -63,6 +63,7 @@
 						<i class="show-list" ng-class="{ selected: template.contains('list', 'table-list') }" ng-click="template.open('list', 'table-list')"></i>
 					</div>
 				</div>
+				<p ng-if="syncStatus() === true">Synchronisé avec l'espace documentaire ✓</p>
 				<container template="list"></container>
 				<!-- Empty screen My rack -->
 				<div class="emptyscreen" ng-if="select.folderName === 'mine' && !totalDisplayed">
