--- a/src/main/resources/public/template/table-list.html
+++ b/src/main/resources/public/template/table-list.html
@@ -1,5 +1,5 @@
 <article class="list-view no-margin" ng-if="totalDisplayed">
-	<table class="twelve">
+	<table class="twelve" ng-if="!shouldGroup">
 		<thead class="tableheader whiteheader">
     		<tr>
     			<th class="icon" ng-if="select.folderName !== 'history'">
@@ -47,4 +47,67 @@
     		</tr>
 		</tbody>
 	</table>
+	<div ng-if="shouldGroup">
+		<div ng-repeat="groupKey in groupKeys" style="margin-bottom: 20px;">
+			<h4 ng-click="toggleGroup(groupKey)" style="cursor: pointer; padding: 10px; margin: 0; border: 1px solid #ddd;">
+				Classe [[groupKey]]
+				<span ng-if="groupStates[groupKey].expanded">▼</span>
+				<span ng-if="!groupStates[groupKey].expanded">▶</span>
+			</h4>
+
+			<div ng-show="groupStates[groupKey].expanded">
+				<table class="twelve">
+					<thead class="tableheader">
+						<tr>
+							<th class="icon" ng-if="select.folderName !== 'history'">
+								<input type="checkbox" ng-model="groupStates[groupKey].allSelected"
+									ng-change="toggleGroupSelection(groupKey)" />
+							</th>
+							<th class="icon"></th>
+							<th class="content" ng-click="orderBy('name')">
+								<i18n>title</i18n>
+							</th>
+							<th class="user" ng-if="select.folderName !== 'history'" ng-click="orderBy('fromName')">
+								<i18n>from</i18n>
+							</th>
+							<th class="user" ng-if="select.folderName === 'history'" ng-click="orderBy('toName')">
+								<i18n>to</i18n>
+							</th>
+							<th class="date" ng-click="orderBy('sent')">
+								<i18n>sentDate</i18n>
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="rack in groupedRacks[groupKey] | orderBy:ordering"
+							ng-class="{ checked: rack.selected }">
+							<td class="icon" ng-if="select.folderName !== 'history'">
+								<input type="checkbox" ng-model="rack.selected"
+									ng-change="updateGroupSelection(groupKey)" />
+							</td>
+							<td class="icon">
+								<div class="twelve cell">
+									<i class="[[rack.metadata.contentType]]"></i>
+								</div>
+							</td>
+							<td class="content">
+								<a ng-href="[[select.folderName === 'mine' ? '/rack/get/' + rack._id : '' ]]">
+									[[rack.name]]
+								</a>
+							</td>
+							<td class="user" ng-if="select.folderName !== 'history'">
+								<a href="/userbook/annuaire#[[rack.from]]">[[rack.fromName]]</a>
+							</td>
+							<td class="user" ng-if="select.folderName === 'history'">
+								<a href="/userbook/annuaire#[[rack.to]]">[[rack.toName]]</a>
+							</td>
+							<td class="date">
+								[[longDate(rack.sent)]]
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
 </article>
