feat: INTEG-897, implement nextcloud periodical sync
feat: INTEG-897, group files in Rack by class name

feat: INTEG-897, update UI to display files sync status message

feat: INTEG-897, implement Nextcloud sync for Rack documents

--- a/src/main/resources/public/template/library.html
+++ b/src/main/resources/public/template/library.html
@@ -57,6 +57,19 @@
 
 		<section class="margin-four">
 			<div class="twelve cell">
+				<div ng-if="shouldDisplaySyncInfo() === true" class="row info" ng-if="!loading">
+					<p>
+						<i18n>rack.nextcloud.sync.info</i18n>
+						<a href="/workspace/workspace?folder=synced">
+							<i18n>rack.nextcloud.sync.info.link</i18n>
+						</a>
+					</p>
+					<p>
+						<i18n>rack.nextcloud.sync.state</i18n>
+						<span ng-if="syncStatus() === false"><i18n>rack.nextcloud.sync.state.syncing</i18n></span>
+						<span ng-if="syncStatus()"><i18n>rack.nextcloud.sync.state.ok</i18n></span>
+					</p>
+				</div>
 				<div class="display-buttons row float-none" ng-if="totalDisplayed">
 					<div class="choice-view">
 						<i class="show-icons" ng-class="{ selected: template.contains('list', 'icons-list') }" ng-click="template.open('list', 'icons-list')"></i>
